🐛 Fix: fix type error